--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Dashboard</title>
+    <title>Music Mojo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -100,7 +100,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Music Dashboard. Built with ❤️</p>
+            <p>&copy; 2025 Music Dashboard. Built with ❤️ by Akash</p>
         </footer>
     </div>
 
