--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <header>
             <div class="header-meta">
-                <span class="author">👤 Created by Akash</span>
+                <span class="author">👤 Created by Akash k H</span>
                 <span class="version">v1.0.0</span>
             </div>
             <h1>🎵 Music Dashboard</h1>
@@ -100,7 +100,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Music Dashboard. Built with ❤️</p>
+            <p>&copy; 2025 Music Dashboard. Built with ❤️ by Akash</p>
         </footer>
     </div>
 
